@@ -12,7 +12,7 @@
 // or the GNU Public License version 2 or later
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: Retriever.cc,v 1.72.2.20 2000/02/02 21:53:07 grdetil Exp $
+// $Id: Retriever.cc,v 1.72.2.21 2000/02/23 18:06:55 grdetil Exp $
 //
 
 #include "Retriever.h"
@@ -960,8 +960,12 @@ Retriever::GetLocal(char *url)
    		continue;
 	    }
    	    *path++ = '\0';
-            prefixes->Add(p);
-            paths->Add(path);
+	    String *pre = new String(p);
+	    decodeURL(*pre);
+	    prefixes->Add(pre);
+	    String *pat = new String(path);
+	    decodeURL(*pat);
+	    paths->Add(pat);
 	    p = strtok(0, " \t");
 	}
     }
@@ -972,12 +976,19 @@ Retriever::GetLocal(char *url)
 	char *p = strtok(t, " \t");
 	while (p)	
 	{
-	    defaultdocs->Add(p);
+	    String *def = new String(p);
+	    decodeURL(*def);
+	    defaultdocs->Add(def);
 	    p = strtok(0, " \t");
 	}
 	if (defaultdocs->Count() == 0)
 	    delete defaultdocs;
     }
+
+    // Begin by hex-decoding URL...
+    String hexurl = url;
+    decodeURL(hexurl);
+    url = hexurl.get();
 
     // Check first for local user...
     if (strchr(url, '~'))
@@ -1066,9 +1077,15 @@ Retriever::GetLocalUser(char *url, StringList *defaultdocs)
 	        continue;
 	    }
 	    *dir++ = '\0';
-	    prefixes->Add(p);
-	    paths->Add(path);
-	    dirs->Add(dir);
+	    String *pre = new String(p);
+	    decodeURL(*pre);
+	    prefixes->Add(pre);
+	    String *pat = new String(path);
+	    decodeURL(*pat);
+	    paths->Add(pat);
+	    String *ptd = new String(dir);
+	    decodeURL(*ptd);
+	    dirs->Add(ptd);
 	    p = strtok(0, " \t");
 	}
     }
